// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingCart component should render ShoppingCart correctly if show is false 1`] = `
<div>
  <div
    class="overlay "
    data-testid="overlay"
  >
    <div
      class="cart "
      data-testid="cart"
      id="cart"
    >
      <div
        class="cartContent"
      >
        <p
          class="title"
        >
          Resumen
        </p>
        <div
          class="selectedProductsList"
        >
          <div
            class="productRow"
          >
            <img
              src="http://testImage"
            />
            <div
              class="productSummary"
            >
              <p
                class="bold"
              >
                testBrand
              </p>
              <p>
                testDescription
              </p>
              <p>
                $
                1.000
              </p>
              <p
                class="bold"
              >
                Cantidad: 
                2
              </p>
            </div>
            <div
              class="productTotal"
            >
              <p
                class="bold"
              >
                $
                2.000
              </p>
              <div
                class="addRemoveButtons"
              >
                <button>
                  -
                </button>
                <p>
                  2
                </p>
                <button>
                  +
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="totals"
        >
          <div
            class="labelAmount"
          >
            <p>
              Subtotal de productos
            </p>
            <p>
              $
              2.000
            </p>
          </div>
          <div
            class="labelAmount total"
          >
            <p>
              Total a pagar
            </p>
            <p>
              $
              2.000
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShoppingCart component should render ShoppingCart correctly if show is true 1`] = `
<div>
  <div
    class="overlay show"
    data-testid="overlay"
  >
    <div
      class="cart open"
      data-testid="cart"
      id="cart"
    >
      <div
        class="cartContent"
      >
        <p
          class="title"
        >
          Resumen
        </p>
        <div
          class="selectedProductsList"
        >
          <div
            class="productRow"
          >
            <img
              src="http://testImage"
            />
            <div
              class="productSummary"
            >
              <p
                class="bold"
              >
                testBrand
              </p>
              <p>
                testDescription
              </p>
              <p>
                $
                1.000
              </p>
              <p
                class="bold"
              >
                Cantidad: 
                2
              </p>
            </div>
            <div
              class="productTotal"
            >
              <p
                class="bold"
              >
                $
                2.000
              </p>
              <div
                class="addRemoveButtons"
              >
                <button>
                  -
                </button>
                <p>
                  2
                </p>
                <button>
                  +
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="totals"
        >
          <div
            class="labelAmount"
          >
            <p>
              Subtotal de productos
            </p>
            <p>
              $
              2.000
            </p>
          </div>
          <div
            class="labelAmount total"
          >
            <p>
              Total a pagar
            </p>
            <p>
              $
              2.000
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
